# services/business-api/src/main/java/com/mathvisionkids/api/auth/AuthResponse.java
@@ -2,10 +2,12 @@ package com.mathvisionkids.api.auth;
 
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 
 @Data
+@NoArgsConstructor
 @AllArgsConstructor
 public class AuthResponse {
-    private String token;
+    private String accessToken;
     private String refreshToken;
 }
